prima foto completa

--- a/index.html
+++ b/index.html
@@ -10,20 +10,39 @@
 <body>
     <!-- container principale -->
     <div class="container">
+        <!-- riga -->
         <div class="row">
-            <div class="position">
-                <div class="img">
-                    <div class="heart">
+            <div>
+                <!-- immagine ed elementi -->
+                <div class="position">
+                    <!-- immagine prima -->
+                    <div class="img">
+                        <img  class="resizing" src="img/1.webp" alt="relaxed fit unisex">
+                   
 
                     </div>
-                    <div class="sale">
+                    <!-- immagine hover -->
+                    <div class="after">
+                        <img class="resizing" src="img/1b.webp" alt="relaxed fit unisex 2">
 
                     </div>
+                         <!-- elemento cuore -->
+                         <div class="heart">
+                             &hearts;
 
-                </div>
-                testo testo testo <br>
-                altro testo <br>
-                costo
+                        </div>
+                        <!-- elemento sale -->
+                        <div class="sale">
+                            -50%
+    
+                        </div>
+                </div> 
+                <!-- costo vestiti -->
+                <div class="testo">
+                    testo testo testo <br>
+                    altro testo <br>
+                    costo
+                </div> 
             </div>
 
         </div>
